# worker-exaple

./: README.md  cookiecutter.json
{{ cookiecutter.package_name }}/: README.md  docker-compose.yml
{{ cookiecutter.package_name }}/alembic/: env.py
{{ cookiecutter.package_name }}/alembic/versions/: 1a9372f957a4_initial_migration.py
{{ cookiecutter.package_name }}/worker_example/: handler.py  models.py  schema.py  settings.py
{{ cookiecutter.package_name }}/worker_example/middlewares/: __init__.py  logging.py
{{ cookiecutter.package_name }}/worker_example/services/: __init__.py
{{ cookiecutter.project_main_name }}/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
{{ cookiecutter.project_main_name }}/alembic/: env.py
{{ cookiecutter.project_main_name }}/worker_example/services/: database.py
{{ cookiecutter.project_main_name }}/{{ cookiecutter.package_name }}/: handler.py  models.py  settings.py
{{ cookiecutter.project_main_name }}/{{ cookiecutter.package_name }}/middlewares/: __init__.py  logging.py
{{ cookiecutter.project_main_name }}/{{ cookiecutter.package_name }}/services/: database.py
