[project]
name = "{{ cookiecutter.package_name }}"
version = "0.1.0"
description = ""
authors = [
    {name = "El'dar Vershinin",email = "vershinineldar@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "faststream[cli] (>=0.5.48,<0.6.0)",
    "faststream[rabbit] (>=0.5.48,<0.6.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sqlalchemy[asyncio] (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
